# learning-design-patterns

./: .gitignore  CMakeLists.txt  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
cmake/: format.cmake
py/patterns/event_bus/: client.py  event_bus_pb2.py  event_bus_pb2_grpc.py  readme.md
src/patterns/: CMakeLists.txt
src/patterns/event_bus/: CmakeLists.txt  event_bus.hh  ievent_bus.hh  main.cc
src/patterns/event_bus/grpc/: client.cc  event_bus.proto  event_bus_service.cc  event_bus_service.hh  server.cc
src/solid/: CMakeLists.txt
